--- a/src/main.tex
+++ b/src/main.tex
@@ -104,11 +104,11 @@
       \pointskillSixty{}{C\# (.NET, Mono)}
       \pointskillFifty{}{Java (Fx, Swing, Maven)}
       \pointskillFifty{}{Matlab}
-      \pointskillForty{}{QT (4 and 5)}
+      \pointskillFortyQt{}{C++ / C   (QT 5)}
     \chartlabel{Front-end (web)}\\
       \pointskillNinety{}{Angular (9/10/14)}
-      \pointskillEighty{}{jQuery}
       \pointskillSeventy{}{React}
+      \pointskillEighty{}{jQuery}
       \pointskillSeventy{}{RxJS / Observables}
       \pointskillSeventy{}{SCSS / SASS}
       \pointskillSeventy{}{Bootstrap (Responsive)}
@@ -121,15 +121,15 @@
       \pointskillSeventy{}{Express (Node.js)}
       \pointskillSixty{}{Microservices (in Python)}
       \pointskillSixty{}{Yii (PHP framework)}
+      \pointskillSixty{}{Knex (Postgres, SQLite)}
       \pointskillThirty{}{Django (Python framework)}
       \pointskillThirty{}{Elixir (Robust scalability)}
-      \pointskillThirty{}{Knex (Postgres, SQLite)}
     \chartlabel{Database}\\
       \pointskillNinety{}{DynamoDB / (MongoDB)}
       \pointskillEighty{}{ElasticSearch}
       \pointskillSeventy{}{PostGres, Sqlite, MySql}
-      \pointskillForty{}{Microsoft SQL Server}
       \pointskillSeventy{}{MySQLWorkbench, DBeaver}
+      \pointskillForty{}{Microsoft SQL Server}
 
 
 }
@@ -157,7 +157,7 @@
 
 \chartlabel{DevOps}\\
 \pointskillEighty{}{Terraform (IaC Multi-Cloud)}
-\pointskillSeventy{}{Kubernetes (Orchestration)}
+\pointskillSixty{}{Kubernetes (Orchestration)}
 \pointskillFifty{}{CloudFormation (IaC AWS)}
 
 \chartlabel{HTML5 players}\\
@@ -183,9 +183,10 @@
 \chartlabel{Operating Systems}\\
 \pointskillEighty{}{Linux (Ubuntu 22)}
 \pointskillSeventy{}{Windows (Win 10)}
-\pointskillFifty{}{Mac (El Capitan 10.11.2)}
-\pointskillSixty{}{Tizen (Samsung TV)}
-\pointskillFifty{}{WebOS (LG TV)}
+\pointskillSixty{}{MacOS (El Capitan 10.11.2)}
+\pointskillSeventy{}{Tizen (Samsung TV)}
+\pointskillForty{}{WebOS (LG TV)}
+
 
 \chartlabel{IDE}\\
 \pointskillEighty{}{Webstorm (Jetbrains)}
