--- a/src/main.tex
+++ b/src/main.tex
@@ -139,7 +139,7 @@
 %                              SIDEBAR 2nd PAGE
 %-------------------------------------------------------------------------------
 \addtobacksidebar{
-\vspace*{-6mm}  % Adjusts the vertical space, move content up by 10mm
+\vspace*{-3mm}  % Adjusts the vertical space, move content up by 10mm
 \chartlabel{AWS Cloud}\\
 \pointskillNinety{}{EC2, S3, CloudWatch}
 \pointskillNinety{}{Lambdas (layer)}
@@ -202,7 +202,7 @@
 }
 
 \addtothirdsidebar{
-\vspace*{-9mm}  % Adjusts the vertical space, move content up by 10mm
+\vspace*{-8mm}  % Adjusts the vertical space, move content up by 10mm
 
   \chartlabel{Scripting}\\
   \pointskillEighty{}{Bash, shell (Linux, Mac)}
@@ -219,7 +219,7 @@
   \pointskillSeventy{}{Figma, Miro}
 
   \chartlabel{AI}\\
-  \pointskillEighty{}{Chatgpt 4.0}
+  \pointskillNinety{}{Chatgpt 4.0}
   \pointskillSixty{}{OpenAI API}
 
 	\profilesection{Languages}
@@ -313,7 +313,7 @@
       \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.\\
       \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.\\
       \textbf{Database and Search}: Managed both legacy (MySQL RDS) and new stack (DynamoDb, ElasticSearch).\\
-      \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, small Lambda, CloudWatch, IAM, ECR. Infra deployment automated with Cloudformation\\
+      \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, small Lambda, CloudWatch, IAM, ECR, SES, SNS. Infra deployed with Cloudformation\\
       \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu\\
       \textbf{Architecture}: Monolithic, no µservices. Shared data model UI \& API\\
       \textbf{CI/CD}: pipelines over gitlab including linter, unitary tests, builder, deployer
