--- a/src/main.tex
+++ b/src/main.tex
@@ -18,7 +18,7 @@
    maincolor=cvblue,
    sectioncolor=cvblue,
 %  subsectioncolor  =orange
-%   sidebarwidth=0.4\paperwidth,
+   sidebarwidth=0.323\paperwidth,
 %   topbottommargin=0.03\paperheight,
 %   leftrightmargin=20pt
 ]{fortysecondscv}
@@ -70,7 +70,7 @@
 % your name
 \cvname{\LARGE Hugo MACHEFER}
 % job title/career
-\cvjobtitle{Full Stack Developer | Devops | Tech Lead }
+\cvjobtitle{Full Stack Developer  \\   | Devops | Tech Lead }
 
 % phone number
 \cvphone{001 514 659 0718}
@@ -107,7 +107,7 @@
       \pointskillFortyQt{}{C++ / C   (QT 5)}
     \chartlabel{Front-end (web)}\\
       \pointskillNinety{}{Angular (9/10/14)}
-      \pointskillSeventy{}{React}
+      \pointskillNinety{}{React}
       \pointskillEighty{}{jQuery}
       \pointskillSeventy{}{RxJS / Observables}
       \pointskillSeventy{}{SCSS / SASS}
@@ -280,29 +280,24 @@
   \cvitemRightNew
       {Jan, 2020 – now} % Date
       {Full stack developer (+devops) | Tech lead} % Job title
-      {difuze} % Company (without location here)
-      {
-        \textbf{Role}: Primarily similar to the previous mission at LVL Studio. Projects:
-          \noindent\hspace*{1mm}*\textbf{difuzego.com:} Enhanced the initial solution.
-          Migration to Angular 14.
-          I introduced the MFA authenticator.
-          Part of our data was moved from ElasticSearch into Postgre, whose model became knex-compliant.
-          Also a file publishing (upload) module has been implemented,
-          ingested in a workflow system based on AWS Step Functions,
-          producing streamable proxies through compression.
-          This workflow solution was further expanded to include an on-prem \textit{workers}
-          ecosystem, Express/Node.js-centric featuring nodes child process intercommunication and SQLite.
-          Additionally, I contributed to the project's streaming and encryption tasks,
-          including MPEG/DASH encoding on AWS by Mediaconvert (at start but replaced later by Hybrik) and encrypted by KeyOS/BuyDRM;
-          including HLS encoding performed on AWS EC2 MacOS (at start but replaced later by local FFMPEG processing), encrypted using the AES-128 algorithm.
-          In this project, Postgres is used, and µsoft SQL Server over tedious; HTML5 video players are Bitmovin and Accurate.
-          \noindent\hspace*{1mm}*\textbf{difuzevox.com}: For the video description project aiding visual impairment, I managed the integration of Azure Text-to-Speech, local FFMPEG, and MediaInfo with Auphonic APIs. We used TTML for voice generation and Video.js for multimedia rendering, all under Terraform management. I oversaw three developers and one QA, focusing on enhancing media accessibility.
-          \noindent\hspace*{1mm}*\textbf{AI Detection Project}: Focused on the detection of specific mouth symbols (e.g., "pucker" shapes) in video frames, scene change detection, and burnt-in text detection using a 3rd-party AI solution. Managed multi-window/browser tab communications via postMessage() and interfacing.
-      \textbf{CI/CD}: I participated in a small project deployed using Kubernetes.
-      \textbf {NPM modules}: axios, knex, objection, pg, qrcode, node-ec2-metadata, nodemon, speakeasy, srt2vtt, unirest, uuid-validate, git-repo-info, jest-preset-angular, jest-spec-reporter, mysql-json, puppeteer, hash-wasm, ngx-device-detector, videojs-playlist, videojs-wavesurfer, fast-diff, ngx-virtual-scroller, angular2-text-mask, js-levenshtein, http-proxy, elementtree, chalk, bcrypt...
+      {difuze inc} % Company
+      {\vspace{0.4pt}
+        \textbf{Role}: Similar to the mission at LVL Studio. Key projects include:\vspace{5pt}
+
+        \noindent\hspace*{1mm}*\textbf{difuzego.com:} Upgraded to Angular 14. Implemented MFA authentication. Helped to migrate data from ElasticSearch to Postgre (Knex-compliant model). Built a file upload module with AWS Step Functions for compressed proxies. Expanded workflow with on-prem Node.js workers (Express) and SQLite. Worked on MPEG/DASH encoding (AWS Mediaconvert, later Hybrik), HLS (AWS EC2 MacOS, later FFMPEG), and AES-128 encryption. Tools: Postgres, SQL Server, Bitmovin, Accurate.\vspace{5pt}
+
+        \noindent\hspace*{1mm}*\textbf{difuzevox.com:} Integrated Azure Text-to-Speech, FFMPEG, MediaInfo, and Auphonic APIs. Used TTML for voice generation and Video.js for multimedia. Managed Terraform infrastructure. Led a team of 3 developers and 1 QA. Focused on media accessibility.\vspace{5pt}
+
+        \noindent\hspace*{1mm}*\textbf{AI Detection Project:} Developed solutions for detecting mouth shapes ("pucker"), scene changes, and burnt-in text using 3rd-party AI tools. Managed multi-window/browser communication (postMessage).\vspace{5pt}
+
+        \textbf{CI/CD:} Contributed to Kubernetes-based deployments.\vspace{5pt}
+
+        \textbf{NPM Modules:} axios, knex, pg, qrcode, node-ec2-metadata, speakeasy, srt2vtt, mysql-json, hash-wasm, videojs-wavesurfer, ngx-virtual-scroller, http-proxy, chalk, bcrypt...
       }
       {Montreal} % Location on the second line, aligned to the right
 \end{cvtableNew}
+
+
 
 
 
@@ -312,17 +307,29 @@
     {Full-Stack coder, Media Asset Management} % Job title
     {LVL Studio} % Company (without location here)
       {
-        \textbf{Role}: As a key contributor to Difuze’s new software stack, I was responsible for architectural decisions, module development, and component creation. I proactively managed the backlog using Jira, conducted code reviews via GitLab, and maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as our primary client, my focus was on enhancing difuzego.com, our main product. Projects:
-          ** \noindent\hspace*{1mm}\textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs
-          ** \noindent\hspace*{1mm}\textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.
-        \textbf{Purpose}: Development based on a Media Asset Management system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, as promotional links in email, preceding deliveries as orders.
-        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, bowser, jsoneditor, lodash, jschardet...
-        \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.
-        \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.
-        \textbf{Database and Search}: Managed both legacy (MySQL RDS) and new stack (DynamoDb, ElasticSearch).
-        \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, small Lambda, CloudWatch, IAM, ECR, SES, SNS. Infra deployed with Cloudformation
-        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu
-        \textbf{Architecture}: Monolithic, no µservices. Shared data model UI \& API
+        \textbf{Role}: As a key contributor to Difuze’s new software stack, I was responsible for architectural decisions, module development, and component creation. I proactively managed the backlog using Jira, conducted code reviews via GitLab, and maintained detailed documentation in Confluence. In a B2B environment with Difuze Inc. as our primary client, my focus was on enhancing difuzego.com, our main product.\vspace{5pt}
+
+        \textbf{Projects:}
+        \begin{itemize}
+          \item \textbf{showcase.com}: Old legacy stack based on YII written in PHP, along with scripts in C\# for scheduling tasks like cron jobs
+          \item \textbf{difuzego.com}: New stack based on \textit{modern} AWS features written in TS.
+        \end{itemize}
+        \textbf{Purpose}: Development based on a Media Asset Management system accessed through HTTPS requests using SOAP protocol, enabling content display in catalog form, with the ability to share films as screeners, as promotional links in email, preceding deliveries as orders.\vspace{5pt}
+
+        \textbf{Front-end}: Angular 2 (v7.2.9), RxJS, Angular Material, also including various NPM modules like ngx-translate, bitmovin, fs-symlink, hammerjs, ngx-perfect-scrollbar, fortawesome, xml2js, subtitle-converter, socket.io-client, react-image-file-resizer, ng2-file-upload, moment-timezone, i18n-iso-countries, d3, bowser, jsoneditor, lodash, jschardet...\vspace{5pt}
+
+        \textbf{Back-end}: RESTful services with OpenAPI, TypeScript Oriented Architecture (tsoa), and NPM imports like exceljs, fs-extra, mustache, socket.io, winston-console-formatter, winston-cloudwatch, uuid-validate, useragent, restify-cors-middleware, restify-errors, reflect-metadata, mime-types, jsonwebtoken, form-data, camelcase, aws-sdk ...; async/await.\vspace{5pt}
+
+        \textbf{Package Management}: Proficient with WebPack, Node.js, and yarn.\vspace{5pt}
+
+        \textbf{Database and Search}: Managed both legacy (MySQL RDS) and new stack (DynamoDb, ElasticSearch).\vspace{5pt}
+
+        \textbf{AWS DevOps}: Experience with ElasticBeanStalk, EC2, S3, small Lambda, CloudWatch, IAM, ECR, SES, SNS. Infra deployed with Cloudformation\vspace{5pt}
+
+        \textbf{Additional Work}: Maintained legacy PHP/YII stack and MySQL RDS; minor C\# developments supervised over Mono on Ubuntu\vspace{5pt}
+
+        \textbf{Architecture}: Monolithic, no µservices. Shared data model UI \& API\vspace{5pt}
+
         \textbf{CI/CD}: pipelines over gitlab including linter, unitary tests, builder, deployer
       }
     {Montreal} % Location on the second line, aligned to the right
